<resources>
    <string name="app_name">Beer lovers</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_tasted">Tasted</string>
    <string name="search_hint">Search Beer</string>
    <string name="beer_image">Beer Image</string>
    <string name="retry">Retry</string>
    <string name="no_connection">No Network Connection</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ibu">IBU:</string>
    <string name="abv">ABV:</string>
    <string name="retired_beer">Retired Beer</string>
    <string name="organic_beer">Organic Beer</string>
    <string name="style">Style:</string>
    <string name="glass">Drinking Glass:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="food">Food Pairings:</string>
    <string name="breweries">Breweries:</string>
    <string name="widget_text">"Style: %s    IBU: %s    ABV: %s%%"</string>
    <string name="dialog_delete">"Are you sure that you want to remove %s from list %s?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_beer_was_found">No beer was found</string>
    <string name="remove_beer">Remove beer</string>
    <string name="next_random_beer">Next random beer</string>
    <string name="add_beer_favorites">Add beer on favorites</string>
    <string name="remove_beer_favorites">Remove beer from favorites</string>
    <string name="search_beer">Search beer</string>
    <string name="add_beer_tasted">Add beer on Tasted</string>
    <string name="remove_beer_tasted">Remove beer from Tasted</string>
</resources>
